compiler/tests/success/arm-m4/bug_1112.jazz
param int N = 7;

export fn main(reg u32 x) -> reg u32 {
  reg u32[N] r;
  inline int i;
  for i = 0 to N { r[i] = x; }
  for i = 0 to N {
    #[keep]
    ?{}, r[i] = #MULS(r[i], x);
  }
  return x;
}
