compiler/tests/fail/arm-m4/subw_set_flags.jazz
export
fn main(reg u32 x) {
    ?{}, x = #SUBS(x, 0x00000aca);
    [x] = x;
}
